tests/expectations/parser/expression/literal/group_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = ["""
Error [EPAR0370004]: Unexpected white space between terms 123 and group
    --> test:1:4
     |
   1 | 123 group
     |    ^"""]
